--- a/AngularApp/projects/applens/src/app/collapsible-menu/components/collapsible-menu/collapsible-menu.component.html
+++ b/AngularApp/projects/applens/src/app/collapsible-menu/components/collapsible-menu/collapsible-menu.component.html
@@ -1,3 +1,3 @@
-<div class="menu" [ngClass]="theme + '-theme'">
+<div class="menu" [style.height]="height" [ngClass]="theme + '-theme'">
     <ng-content></ng-content>
 </div>
