--- a/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-develop/tab-develop.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-develop/tab-develop.component.html
@@ -1,4 +1,4 @@
-<div class="flow-container">
+<div style="height:100%">
   <onboarding-flow [mode]="DevelopMode.Edit" [id]="id">
   </onboarding-flow>
 </div>
