--- a/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-monitoring-develop/tab-monitoring-develop.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-monitoring-develop/tab-monitoring-develop.component.html
@@ -32,7 +32,7 @@
       </ul>
     </div>
   </div>
-<div class="flow-container">
+<div style="height:100%">
   <onboarding-flow [mode]="mode" [id]="detectorId" [dataSource] = "dataSourceFlag" [timeRange] = "timeRangeInHours" [startTime] = "startTime" [endTime] = "endTime">
   </onboarding-flow>
 </div>
