--- a/AngularApp/projects/applens/src/app/modules/dashboard/dashboard/dashboard.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/dashboard/dashboard.component.html
@@ -1,17 +1,17 @@
 <header class="main-header">
   <a (click)="reloadHome()" class="logo">
     <span class="logo-lg">
-      <span class="app-title">App</span>Lens
+        <span style="color:#ffb353">App</span>Lens
     </span>
   </a>
 
-  <nav class="navbar navbar-fixed-top" role="navigation"></nav>
+  <nav class="navbar navbar-static-top" role="navigation">
+    <!-- <time-picker></time-picker> -->
+  </nav>
 </header>
 
-<div class="site-content">
-  <side-nav></side-nav>
+<side-nav></side-nav>
 
-  <div class="content-wrapper white-background">
+<div class="content-wrapper white-background" [style.height]="contentHeight">
     <router-outlet></router-outlet>
-  </div>
 </div>
