--- a/AngularApp/projects/applens/src/app/modules/dashboard/gist/gist.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/gist/gist.component.html
@@ -1,4 +1,4 @@
-<div class="flow-container">
+<div style="height:100%">
   <onboarding-flow [mode]="DevelopMode.Create" [gistMode]="true">
   </onboarding-flow>
 </div>
