--- a/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-common/tab-common.component.scss
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-common/tab-common.component.scss
@@ -1,8 +1,3 @@
-.main-content {
-  // height of fixed-position navbar = 42px
-  padding-top: 42px;
-}
-
 .active-tab {
   color: rgb(68, 68, 68);
   background-color: #fff !important;
@@ -11,26 +6,11 @@
 }
 
 body {
-  padding: 0 10px;
-}
-
-.nav-container {
-  max-height: 50px;
-  padding-top: 10px;
-  background-color: #ecf0f5;
-  position: fixed;
-  top: 50px;
-  width: 100%;
-  z-index: 10;
-}
-
-.nav.nav-tabs {
-  padding: 0 20px;
+  padding: 10px;
 }
 
 .tab-container {
-  overflow-y: auto;
-  min-height: 80vh;
+  overflow-y: scroll;
 }
 
 ::-webkit-scrollbar {
@@ -49,5 +29,5 @@ body {
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: rgb(92, 97, 133);
+  background: rgb(92, 97, 133); 
 }
