--- a/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-gist-common/tab-gist-common.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-gist-common/tab-gist-common.component.html
@@ -1,6 +1,6 @@
-<div class="tab-gist">
-  <div class="toolbar-container">
-    <ul class="nav nav-tabs">
+<div>
+  <div style="padding-top:10px;background-color: #ecf0f5;">
+    <ul class="nav nav-tabs" style="padding-left:20px;">
       <li class="nav-item">
         <a [routerLink]="['.']" preserveFragment queryParamsHandling="preserve"
           [routerLinkActive]="['active', 'active-tab']" [routerLinkActiveOptions]="{exact:true}">Develop</a>
@@ -12,7 +12,7 @@
     </ul>
   </div>
   <div>
-    <div class="tab-container">
+    <div class="tab-container" [style.height]="contentHeight">
       <router-outlet></router-outlet>
     </div>
   </div>
