--- a/AngularApp/projects/diagnostic-data/src/lib/components/vertical-display-list/vertical-display-list.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/vertical-display-list/vertical-display-list.component.scss
@@ -34,6 +34,7 @@
 }
 
 .right-column-container {
+    /* padding-left: 250px; */
     overflow-y: auto;
 }
 
@@ -63,6 +64,7 @@ list-item:hover {
 
 .list-item-selected {
     border-right: 3px solid #87d286;
+    /* background-color: #e6e6e6; */
     color: #000000;
     background-color: #d0d0d0;
 }
@@ -88,7 +90,7 @@ list-item-selected:hover {
 .right-column-container::-webkit-scrollbar-track
 {
     background-color: rgba(226, 226, 226, 0.28);
-	  border-radius: 5px;
+	border-radius: 5px;
 }
 
 .right-column-container::-webkit-scrollbar
