--- a/AngularApp/projects/applens/src/app/modules/dashboard/dashboard/dashboard.component.scss
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/dashboard/dashboard.component.scss
@@ -1,7 +1,37 @@
+.site-content {
+    padding-top: 50px;
+}
+
+side-nav {
+    position: fixed;
+    top: 50px;
+}
+
 .logo {
     cursor: pointer;
+    position: fixed;
+    top: 0;
 }
 
 .white-background {
     background-color: white;
+}
+
+.app-title {
+    color: #ffb353
+}
+
+.content-wrapper.white-background {
+    min-height: calc(100vh - 50px);
+    height: 100%;
+
+    // Nested onboarding-flow components have two navbars totalling 92px
+    ::ng-deep onboarding-flow {
+        height: calc(100vh - 92px);
+    }
+
+    // The immediate child onboarding-flow does not have a 42px header
+    ::ng-deep>onboarding-flow {
+        height: calc(100vh - 50px);
+    }
 }
