--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tabs/tabs.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tabs/tabs.component.scss
@@ -2,6 +2,11 @@
 
 .app-nav-bar {
     background-color: #ffffff;
+    padding: 5px 5px 0;
+}
+
+.nav.nav-tabs {
+    border: 0;
 }
 
 #app-content {
