Configure Detector Link in Internal Solution Text (#304)

--- a/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.html
@@ -31,7 +31,7 @@
 <ng-template #internal_solution>
     <ng-template #header>
         Instructions for the Customer
-        <button class="btn btn-default copy-text" (click)="copyInstructions(solution.InternalMarkdown)">
+        <button class="btn btn-default copy-text" (click)="copyInstructions(renderedInternalMarkdown)">
             <span class="fa fa-copy"></span>
             {{copyText}}
         </button>
@@ -39,7 +39,7 @@
 
     <div class="mt-5">
       <data-container [headerTemplate]="header">
-          <markdown [data]="solution.InternalMarkdown"></markdown>
+          <markdown [data]="renderedInternalMarkdown"></markdown>
       </data-container>
     </div>
 </ng-template>
