Admin panel page added

--- a/AngularApp/projects/applens/src/app/modules/site/site-finder/site-finder.component.scss
+++ b/AngularApp/projects/applens/src/app/modules/site/site-finder/site-finder.component.scss
@@ -1,5 +1,6 @@
 .main-container {
     background-color: #e4e4e4;
+    height: 100vh;
 }
 
 .multiple-sites {
@@ -22,4 +23,3 @@
     font-size: 30px;
     height: 100%;
 }
-
