--- a/AngularApp/projects/applens/src/app/modules/main/main/main.component.html
+++ b/AngularApp/projects/applens/src/app/modules/main/main/main.component.html
@@ -4,6 +4,7 @@
       <div class="box box-primary">
         <div class="box-header with-border">
           <h3 class="box-title">Search Applens</h3>
+          <a href="admin" class="hyperlink pull-right">Admin Panel</a>
         </div>
 
         <form #form="ngForm" (ngSubmit)="onSubmit(form.value)">
@@ -49,13 +50,13 @@
             </div>
           </div>
           <div class="form-group go-form">
-            <button class="btn btn-primary go-button" 
+            <button class="btn btn-primary go-button"
                 [disabled]="!(resourceName && resourceName.length > 0)" type="Submit">
               Go
             </button>
           </div>
         </form>
-        <div class = "error-msg-container">
+        <div class="error-msg-container">
           <div *ngIf = "this.errorMessage!== ''" class="errorMessage">
               {{this.errorMessage}}
           </div>
