Fixes to Analysis Layer after testing a few end to end scenarios (#329)
* Few fixes based on testing and usage

* Fixing tabs for legacy analysis components

* Switching to list for successful checks

* Adding card navigation for analysis and scrolling to top on detector click

* Adding Expand View in analysis detector in applens

* Error Handling in analysis detectors

* Hide analysis divider when no analysisTypes

* Changes based on feedback

--- a/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-analysis/tab-analysis.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-analysis/tab-analysis.component.html
@@ -10,10 +10,17 @@
     <div style="display: inline-block">
       <h4>{{ detectorName }}</h4>
     </div>
-    <div style="display: inline-block;margin-left: 10px">
-      <a *ngIf="detectorId !== ''" [routerLink]="['../../']" preserveFragment
-        queryParamsHandling="preserve">Back to observations</a>
+    <div class="pull-right">
+
+      <div style="display: inline-block">
+        <button class="btn btn-sm" *ngIf="detectorId !== ''" [routerLink]="['../../../../detectors',detectorId]"
+          preserveFragment queryParamsHandling="preserve">Go to Detector</button>
+      </div>
+      <div style="display: inline-block;margin-left: 10px;margin-right:20px">
+        <button class="btn btn-sm" *ngIf="detectorId !== ''" [routerLink]="['../../']" preserveFragment
+          queryParamsHandling="preserve">Back to Observations</button>
+      </div>
     </div>
   </div>
-  <router-outlet></router-outlet>
+  <router-outlet (activate)="onActivate($event)"></router-outlet>
 </div>
