--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.html
@@ -1,13 +1,13 @@
 <div class="home-container">
     <div class="input-group input-group-lg search-input-group">
-        <input tabindex="100" type="text" class="form-control" aria-label="Search App Service Diagnostics" placeholder="Search App Service Diagnostics" [ngModel]="searchValue" (ngModelChange)="updateSearchValue($event)" (focus)="onSearchBoxFocus(event)">
+        <input tabindex="0" type="text" class="form-control" aria-label="Search App Service Diagnostics" placeholder="Search App Service Diagnostics" [ngModel]="searchValue" (ngModelChange)="updateSearchValue($event)" (focus)="onSearchBoxFocus(event)">
         <div class="input-group-btn">
-            <button class="btn btn-default" type="button" aria-label="Clear" title="Clear" tabindex="101" (click)="clearSearch()"><i class="fa fa-close"></i></button>
+            <button class="btn btn-default" type="button" aria-label="Clear" title="Clear" tabindex="0" (click)="clearSearch()"><i class="fa fa-close"></i></button>
         </div>
     </div>
     <div *ngIf="!searchBoxFocus else searchResults" class="main-area">
-        <h2>App Service Diagnostics</h2>
-        <p id="page-description">
+        <h2 tabindex="0">App Service Diagnostics</h2>
+        <p id="page-description" tabindex="0">
             Use App Service Diagnostics to investigate how your app is performing, diagnose issues, and discover how to improve your application. Select the problem category that best matches the information or tool that you're interested in: 
         </p>
         <div *ngIf="categories" class="category-container">
@@ -15,7 +15,7 @@
                 <category-tile [category]="category"></category-tile>
             </div>
         </div>
-        <div class="privacy-statement">
+        <div class="privacy-statement" tabindex="0">
                 <a href="https://azure.microsoft.com/en-us/support/legal/?amp%3Bclcid=0x9" target="_blank">Privacy</a>
             </div>
     </div>
