--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/search-results/search-results.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/search-results/search-results.component.html
@@ -1,5 +1,5 @@
 <div class="search-result-container">
-  <div class="search-result" *ngFor="let feature of features" (click)="navigateToFeature(feature)">
+  <div class="search-result" *ngFor="let feature of features" (click)="navigateToFeature(feature)" (keyup.enter)="navigateToFeature(feature)" tabindex="0">
     <div class="feature-icon">
       <div class="feature-icon-cirlce" [style.background-color]="feature.featureType.color">
         <i class="fa" [ngClass]="feature.featureType.icon"></i>
