--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-view/detector-view.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-view/detector-view.component.html
@@ -1,9 +1,7 @@
 <div *ngIf="detectorDataLocalCopy">
   <div *ngIf="!hideDetectorHeader && !analysisMode">
     <section class="content-header">
-      <h1 *ngIf="!isSystemInvoker">
-        <span *ngIf="!insideDetectorList">{{detectorDataLocalCopy.metadata.name}}</span>
-      </h1>
+      <span class="span-h1" *ngIf="!isSystemInvoker && !insideDetectorList">{{detectorDataLocalCopy.metadata.name}}</span>
       <div class="description">{{detectorDataLocalCopy.metadata.description}}</div>
       <section *ngIf="!isPublic">
         <div class="description">By
