--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-list-analysis/detector-list-analysis.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-list-analysis/detector-list-analysis.component.html
@@ -32,7 +32,7 @@
                                 <tr>
                                     <th class="col-sm-2">Issues</th>
                                     <th class="col-sm-6">Description</th>
-                                    <th class="col-sm-1"></th>
+                                    <th class="col-sm-1">Link</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -107,7 +107,7 @@
                             <tr>
                                 <th class="col-sm-2">Checks</th>
                                 <th class="col-sm-6">Description</th>
-                                <th class="col-sm-1"></th>
+                                <th class="col-sm-1">Link</th>
                             </tr>
                         </thead>
                         <tbody>
