--- a/AngularApp/projects/app-service-diagnostics/src/app/supportbot/message-flow/health-check/health-check.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/supportbot/message-flow/health-check/health-check.component.scss
@@ -1,23 +1,31 @@
-.message-container{
-    border-left-width:10px;
-    background-color:transparent;
+.message-container {
+    border-left-width: 10px;
+    background-color: transparent;
     margin-left: 20px;
     margin-right: 20px;
 }
-.success-message{
-    border-color:#80ba02;
+
+.success-message {
+    border-color: #80ba02;
 }
-.warning-message{
+
+.warning-message {
     border-color: #ff8102;
 }
-.error-message{
+
+.error-message {
     border-color: #e81325;
 }
 
 .loading-container {
-    height:406px;
+    height: 406px;
     display: flex;
     align-items: center;
     justify-content: center;
     color: #cccccc;
+}
+
+.panel-heading li:hover ul,
+.panel-heading li a:focus + ul {
+    display: block;
 }
