Add escape event to parent elements to make it easier to escape the search list

--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.html
@@ -1,9 +1,9 @@
 <div class="home-container">
-  <div class="input-group input-group-lg search-input-group">
+  <div class="input-group input-group-lg search-input-group" (keyup.escape)="clearSearch()">
     <input tabindex="0" type="text" class="form-control" aria-label="Search App Service Diagnostics"
       placeholder="Search App Service Diagnostics" [ngModel]="searchValue" (ngModelChange)="updateSearchValue($event)"
       (focus)="onSearchBoxFocus(event)">
-    <div class="input-group-btn">
+    <div class="input-group-btn" id="clear-search">
       <button class="btn btn-default" type="button" aria-label="Clear" title="Clear" tabindex="0"
         (click)="clearSearch()"><i class="fa fa-close"></i></button>
     </div>
@@ -13,7 +13,7 @@
     <p id="page-description" tabindex="0">
       Use App Service Diagnostics to investigate how your app is performing, diagnose issues, and discover how to
       improve your application. Select the problem category that best matches the information or tool that you're
-      interested in: 
+      interested in:
     </p>
     <div *ngIf="categories" class="category-container">
       <div *ngFor="let category of categories" style="display: inline-block;padding: 20px 40px 20px 0px">
