--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-tile/category-tile.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-tile/category-tile.component.html
@@ -1,4 +1,5 @@
-<div class="category-container" (click)="navigateToCategory()" (keyup.enter)="navigateToCategory()" tabindex="0">
+<div class="category-container" (click)="navigateToCategory()" (keyup.enter)="navigateToCategory()"
+  tabindex="0" role="button">
   <div class="title-container" [style.background-color]="category.color">
     {{category.name}}
   </div>
@@ -13,5 +14,5 @@
         </div>
       </div>
   </div>
-  
+
 </div>
