--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.html
@@ -1,14 +1,19 @@
 <div class="home-container">
-  <div class="input-group input-group-lg search-input-group" (keyup.escape)="clearSearch()">
-    <input tabindex="0" type="text" class="form-control" aria-label="Search App Service Diagnostics"
+  <div class="input-group input-group-lg search-input-group" (keyup.escape)="clearSearch()" role="search">
+    <input tabindex="0" type="search" class="form-control" aria-label="Search App Service Diagnostics"
       placeholder="Search App Service Diagnostics" [ngModel]="searchValue" (ngModelChange)="updateSearchValue($event)"
-      (focus)="onSearchBoxFocus(event)">
+      (focus)="onSearchBoxFocus(event)" aria-controls="search-results">
     <div class="input-group-btn" id="clear-search">
       <button class="btn btn-default" type="button" aria-label="Clear" title="Clear" tabindex="0"
         (click)="clearSearch()"><i class="fa fa-close"></i></button>
     </div>
   </div>
-  <div *ngIf="!searchBoxFocus else searchResults" class="main-area">
+  <div id="search-results" role="region" aria-live="polite">
+    <ng-container *ngIf="searchBoxFocus">
+      <search-results [searchValue]="searchValue" (keyup.escape)="clearSearch()"></search-results>
+    </ng-container>
+  </div>
+  <div class="main-area">
     <h2 tabindex="0">App Service Diagnostics</h2>
     <p id="page-description" tabindex="0">
       Use App Service Diagnostics to investigate how your app is performing, diagnose issues, and discover how to
@@ -25,7 +30,3 @@
     </div>
   </div>
 </div>
-
-<ng-template #searchResults>
-  <search-results [searchValue]="searchValue" (keyup.escape)="clearSearch()"></search-results>
-</ng-template>
