--- a/AngularApp/projects/applens/src/app/modules/dashboard/onboarding-flow/onboarding-flow.component.scss
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/onboarding-flow/onboarding-flow.component.scss
@@ -291,3 +291,131 @@ span.rotate {
     visibility: visible;
     opacity: 1;
 }
+
+.utterancestab {
+  overflow: hidden;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+  cursor: pointer;
+  transition: 0.3s;
+  text-align: center;
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+.utterancestab:hover {
+  background-color: #ddd;
+}
+
+.utterancessection {
+  width: 50%;
+}
+
+/* Style the tab content */
+.utterancestabcontent {
+  border: 1px solid #ccc;
+  overflow-y: scroll;
+  height: 350px;
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+.utterances-text{
+  color: black;
+}
+
+.utterancesaddicon {
+  float: left;
+  margin-right: 10px;
+  margin-top: 3px;
+  cursor: pointer;
+}
+
+.utterancesremoveicon {
+  float: right;
+  color: red;
+  margin-right: 10px;
+  margin-top: 3px;
+  cursor: pointer
+}
+
+.utteranceslist {
+  list-style: none;
+  color: indigo;
+  font-size: 14px;
+}
+
+.btn-link {
+  background-color: #1ea4fff2;
+  border: none;
+  color: white;
+  padding: 3px 8px;
+  font-size: 16px;
+  cursor: pointer;
+  display: inline;
+  float: right;
+}
+
+.btn-add {
+  background-color: green;
+  border: none;
+  color: white;
+  padding: 0px 4px;
+  font-size: 11px;
+  cursor: pointer;
+  display: inline;
+}
+
+.btn-link:hover {
+  background-color: RoyalBlue;
+}
+
+.icon-err {
+  background-color: transparent;
+  border: none;
+  color: red;
+  padding: 3px 8px;
+  font-size: 16px;
+  cursor: pointer;
+  display: inline;
+}
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+td {
+  vertical-align: top;
+}
+
+.custom-utterance-input {
+    width: 90% !important;
+    display: inline!important;
+    border: 1px solid grey;
+}
+
+.custom-utterance-box {
+    margin-left: 40px;
+    margin-top: 10px;
+}
+
+.recommended-terms-title {
+    width: 100%;
+    margin-left: 40px;
+    display: block;
+}
+
