Announce search result count using aria status field

--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.html
@@ -1,12 +1,17 @@
 <div class="home-container">
   <div class="input-group input-group-lg search-input-group" (keyup.escape)="clearSearch()" role="search">
-    <input tabindex="0" type="search" class="form-control" [attr.aria-label]="inputAriaLabel"
-      placeholder="Search App Service Diagnostics" [ngModel]="searchValue" (ngModelChange)="updateSearchValue($event)"
-      (focus)="onSearchBoxFocus(event)" (focusout)="onSearchLostFocus()" aria-controls="search-results">
+    <input tabindex="0" type="search" class="form-control" placeholder="Search App Service Diagnostics"
+      [ngModel]="searchValue" (ngModelChange)="updateSearchValue($event)" (focus)="onSearchBoxFocus(event)"
+      (focusout)="onSearchLostFocus()" aria-controls="search-results">
     <div class="input-group-btn" id="clear-search">
       <button class="btn btn-default" type="button" aria-label="Clear" title="Clear" tabindex="0"
-        (click)="clearSearch()"><i class="fa fa-close"></i></button>
+        (click)="clearSearch()">
+        <i class="fa fa-close"></i>
+      </button>
     </div>
+  </div>
+  <div role="status">
+    <p *ngIf="inputAriaLabel">{{inputAriaLabel}}</p>
   </div>
   <div id="search-results" role="region" aria-live="polite">
     <ng-container *ngIf="searchBoxFocus">
