--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.html
@@ -5,7 +5,7 @@
       (focusout)="onSearchLostFocus()" aria-controls="search-results">
     <div class="input-group-btn" id="clear-search">
       <button class="btn btn-default" type="button" aria-label="Clear" title="Clear" tabindex="0"
-        (click)="clearSearch()">
+        (click)="clearSearch()" (focus)="onFocusClear()">
         <i class="fa fa-close"></i>
       </button>
     </div>
