Ajsharm/detector author publish flow (#359)
* Changes for managing utterances in detector publish workflow

* UI Styling changes for utterances

* Changes to publishing UI for search term addition

* Publishing UI changes to make is more user friendly and language more simple.

* Publishing workflow

* Added documentation in backend

* Classes for styles, handling undefined scenario for recommended utterances

* Search term addition component added

* minor corrections in formatting

* No fixed height for div

* Resolved master conflicts

* identation

--- a/AngularApp/projects/applens/src/styles.scss
+++ b/AngularApp/projects/applens/src/styles.scss
@@ -150,3 +150,8 @@ body {
 .skin-blue .wrapper {
     background-color: #f0f0f0
 }
+
+.nsm-dialog-open {
+  min-width: 70vw;
+  min-height: 70vh;
+}
