Width settings for publish modal only (#364)

--- a/AngularApp/projects/applens/src/app/modules/dashboard/onboarding-flow/onboarding-flow.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/onboarding-flow/onboarding-flow.component.html
@@ -1,6 +1,6 @@
 <div class="view-container">
 
-  <ngx-smart-modal #publishModal identifier="publishModal">
+  <ngx-smart-modal #publishModal identifier="publishModal" [customClass]="'publish-dialog'">
     <div>
       <h4>Confirm?</h4>
       <hr style="margin-top: 10px;margin-bottom: 10px;">
