--- a/AngularApp/projects/applens/src/styles.scss
+++ b/AngularApp/projects/applens/src/styles.scss
@@ -151,7 +151,7 @@ body {
     background-color: #f0f0f0
 }
 
-.nsm-dialog-open {
-  min-width: 70vw;
-  min-height: 70vh;
+.publish-dialog{
+  min-width: 70vw !important;
+  min-height: 70vh !important;
 }
